--- a/example/example/Base.lproj/Main.storyboard
+++ b/example/example/Base.lproj/Main.storyboard
@@ -68,20 +68,22 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2iq-qn-Dhx">
                                 <rect key="frame" x="112.5" y="308.5" width="150" height="50"/>
+                                <color key="backgroundColor" red="0.18502387349999999" green="0.66666668650000005" blue="0.21363270440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Qqs-34-vU0"/>
                                     <constraint firstAttribute="height" constant="50" id="vfo-WB-bB0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                 <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.0" green="0.56152977000000004" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="prW-OS-IAV" kind="show" id="2di-cO-85f"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.085976656861940129" green="0.66666668653488159" blue="0.621729273887769" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2iq-qn-Dhx" firstAttribute="centerX" secondItem="kGF-ao-Rtt" secondAttribute="centerX" id="E1a-9T-D2V"/>
                             <constraint firstItem="2iq-qn-Dhx" firstAttribute="centerY" secondItem="kGF-ao-Rtt" secondAttribute="centerY" id="fgc-v4-ZNj"/>
